Bug 831884 - Prevent calling MatchOnly on Win64 as a stopgap. r=dvander